arreglo de tipo de mapa en modal y base de datos

--- a/materiales/templates/materiales/formularios_altas/alta_mapa.html
+++ b/materiales/templates/materiales/formularios_altas/alta_mapa.html
@@ -3,7 +3,7 @@
 <div data-block="content" data-form="mapa">
     <div class="row mb-3">
         <div class="col-md-4">
-            <label for="sede">Sede: <span style="color: red;">*</span></label>
+            <label for="sede-mapa">Sede: <span style="color: red;">*</span></label>
             <select class="form-select select-sede" id="sede-mapa" name="sede_mapa" required>
                 <option value="">Seleccione una sede</option>
                 <option value="sede1">La Plata</option>
